tdf#167770 writerfilter: zero out margin if left/right aligned

Both shapes and graphics should be flush against the edge
of the page/paragraph when they are right or left aligned.

During layout, MS Word doesn't save space for "text wrapping"
on the side where there can be no text,
so this is best emulated by zeroing out what LO calls the "margin".
This has been partially done since 2006,
but now I'm trying to consistently cover all cases.

This longstanding bug became more prominent in 24.8
with commit eacf8dc7ab850f2d00bd4b327f830c55cf2a0d92
Author: Justin Luth on Tue Mar 5 19:22:34 2024 -0500
  tdf#160049 dml import: use margins with left/right HoriOrientRelation
  Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164443

For now, just keep it simple to see the bugfix changes.
Later, this can be dedupped into a single function.

make CppunitTest_sw_ooxmlexport21 \
    CPPUNIT_TEST_NAME=testTdf160049_anchorMargin2

make CppunitTest_sw_ooxmlimport CPPUNIT_TEST_NAME=testTdf96218

Change-Id: I62a2434212bd050922b74a0105ef30c8c4c3c393
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188786
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188861
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>